# PitiviGes

./: .gitignore  .gitmodules  Android.mk  ChangeLog  Makefile.am  NEWS  RELEASE  autogen.sh  configure.ac  gnonlin.spec.in
bindings/python/: ges-types.defs  ges.defs  ges.override
bindings/python/examples/: keyframe.py  keyframes.py
docs/: Makefile.am
docs/design/: controller  controller.notes  material.txt  metadata.txt
docs/future/: .gitignore  High_Level_API.markdown  Makefile.am  ges.sections.txt  help_to_markdown.py  mallard_to_markdown.py
docs/future/markdown/: Advanced_Usage.markdown  High_Level_API.markdown  Low_Level_API.markdown  Overview.markdown  Playback_And_Rendering.markdown  Project_Management.markdown  index.md
docs/ges/: Makefile.am
docs/ges/md/: Assets.markdown  Base_Classes.markdown  Convenience_classes.markdown  GESAsset.markdown  GESAudioSource.markdown  GESAudioTestSource.markdown  GESAudioTrack.markdown  GESAudioTransition.markdown  GESAudioUriSource.markdown  GESBaseEffect.markdown  GESBaseEffectClip.markdown  GESBaseTransitionClip.markdown  GESBaseXmlFormatter.markdown  GESClip.markdown  GESClipAsset.markdown  GESContainer.markdown  GESEffect.markdown  GESEffectClip.markdown  GESExtractableInterface.markdown  GESFormatter.markdown  GESGroup.markdown  GESImageSource.markdown  GESLayer.markdown  GESMetaContainer.markdown  GESMultiFileSource.markdown  GESOperation.markdown  GESOperationClip.markdown  GESOverlayClip.markdown  GESPipeline.markdown  GESPitiviFormatter.markdown  GESProject.markdown  GESSource.markdown  GESSourceClip.markdown  GESTestClip.markdown  GESTextOverlay.markdown  GESTextOverlayClip.markdown  GESTimeline.markdown  GESTimelineElement.markdown  GESTitleClip.markdown  GESTitleSource.markdown  (+27 more)
docs/libs/: Makefile.am  ges-docs.sgml  ges-sections.txt  gnonlin-docs.sgml  gnonlin.args  gnonlin.hierarchy  gnonlin.interfaces
docs/libs/inspect/: plugin-gnonlin.xml
docs/man/: Makefile.am
docs/man/man1/: Makefile.am  authors.txt  ges-launch-1.0-clip.txt  ges-launch-1.0-effect.txt  ges-launch-1.0-help.txt  ges-launch-1.0-set-.txt  ges-launch-1.0.txt
docs/man/man5/: Makefile.am  ges-launch-1.0-timeline.txt
docs/random/: design
examples/: .gitignore  Makefile.am  add_example.py  add_one_clip_in_each_layer.markdown  add_one_video_track.markdown  commit_timeline.markdown  create_timeline_with_n_layers.markdown  full_timeline_tutorial.markdown  get_timeline_element_by_name.markdown  remove_layer.markdown  remove_track.markdown  save_and_load_timeline.markdown
examples/c/: .gitignore  Makefile.am  add_one_clip_in_each_layer.c  add_one_video_track.c  commit_timeline.c  create_timeline_with_n_layers.c  examples.h  full_timeline_tutorial.c  get_timeline_element_by_name.c  play_timeline.c  remove_layer.c  remove_track.c  save_and_load_timeline.c
examples/python/: Makefile.am  add_one_video_track.py  commit_timeline.py  create_timeline_with_n_layers.py  get_timeline_element_by_name.py  play_timeline.py  remove_layer.py  remove_track.py  save_and_load_timeline.py
examples/shell/: .gitignore  Makefile.am  add_one_clip_in_each_layer.sh  add_one_video_track.sh  remove_track.sh  save_and_load_timeline.sh
ges/: .gitignore  Makefile.am  ges-asset.c  ges-audio-transition.c  ges-audio-uri-source.c  ges-base-xml-formatter.c  ges-clip.c  ges-command-line-formatter.c  ges-container.c  ges-controller.c  ges-controller.h  ges-effect.c  ges-enums.c  ges-extractable.c  ges-extractable.h  ges-formatter.c  ges-formatter.h  ges-gerror.h  ges-group.c  ges-internal.h  ges-keyframe.c  ges-keyframe.h  ges-layer.c  ges-layer.h  ges-material-file-source.c  ges-material-file-source.h  ges-material-project.c  ges-material-project.h  ges-material-source.c  ges-material-source.h  ges-material.c  ges-material.h  ges-multi-file-source.c  ges-pipeline.c  ges-pitivi-formatter.c  ges-project.c  ges-project.h  ges-smart-adder.c  ges-structured-interface.c  ges-structured-interface.h  (+32 more)
ges/nle/: nlecomposition.c  nlesource.c
gnl/: .gitignore  LICENSE  Makefile.am  NEWS  configure.ac  gnl.c  gnl.h  gnlcomposition.c  gnlcomposition.h  gnlfilesource.c  gnlghostpad.c  gnlghostpad.h  gnlobject.c  gnlobject.h  gnloperation.c  gnloperation.h  gnlsource.c  gnltypes.h  gnlurisource.c  gnlurisource.h
gnl/docs/: version.entities.in
gnl/docs/libs/: .gitignore  Makefile.am  gnonlin-docs.sgml  gnonlin-sections.txt  gnonlin.interfaces  gnonlin.signals
gnl/docs/random/: part-gnlcomposition.txt
gnl/tests/check/: Makefile.am
pitivi/: clipproperties.py
pitivi/timeline/: curve.py  track.py
pitivi/utils/: timeline.py  widgets.py
plugins/nle/: nlecomposition.c
tests/: Makefile.am
tests/check/: Makefile.am
tests/check/ges/: backgroundsource.c  basic.c  clip.c  filesource.c  group.c  integration.c  keyframes.c  layer.c  material.c  mixers.c  overlays.c  render.c  test-utils.c  test-utils.h  timelineedition.c  timelineobject.c  titles.c  transition.c  uriclip.c
tests/check/gnl/: common.c  common.h  complex.c  gnlcomposition.c  gnloperation.c  gnlsource.c  seek.c  simple.c
tests/examples/: Makefile.am  add_one_clip_in_each_layer.c  add_one_clip_in_each_layer.markdown  add_one_clip_in_each_layer.py  add_one_video_track.markdown  concatenate.c  create_timeline_with_n_layers.c  create_timeline_with_n_layers.markdown  full_timeline_tutorial.c  full_timeline_tutorial.markdown  full_timeline_tutorial.py  keyframes.c  materials.c  my_transition.c  play_timeline.c
tests/examples/python/: material.py  simple.py
tests/scenarios/: ges-edit-clip-while-paused.scenario
tests/tools/: ges-projects-launcher.py
tests/validate/: Makefile.am
tools/: ges-launch.c  ges-launcher.c  ges-launcher.h  ges-validate.c
